# OpenCV4Android

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h  lbph_faces.cpp  native-lib.cpp
app/src/main/cpp/include/opencv2/core/: private.cuda.hpp  private.hpp
app/src/main/java/com/jiangdg/opencv4android/: FaceDetectActivity.java  MainActivity.java
app/src/main/java/com/jiangdg/opencv4android/natives/: DetectionBasedTracker.java
app/src/main/res/layout/: activity_facedetect.xml
